Bertsch: Added tellafriend-functionality and improved protest-forms.

--- a/config/app_config.yml.SAMPLE
+++ b/config/app_config.yml.SAMPLE
@@ -19,6 +19,9 @@ development: &defaults
     sender_address: "\"ProtestMailer Error\" <admin@kampagnenslogan.local>"
     email_prefix: "[ProtestMailer] "
 
+  invitation:
+    subject: Einladung zur Online-Aktion
+
 test:
   <<: *defaults
   base_url: http://localhost:3000
