--- a/test/fixtures/newsletters.yml
+++ b/test/fixtures/newsletters.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: newsletters
+#
+#  id         :integer         not null, primary key
+#  subject    :string(255)
+#  content    :text
+#  send_at    :datetime
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
